# MatrixApp

./: .gitignore  Cargo.toml  bundled.scss  index.html  settings.json
src/: main.rs
src/error/: mod.rs
src/styles/: style.module.scss
src/types/: room.rs  session.rs
src/views/: mod.rs
