[package]
name = "Matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
matrix-sdk = { version = "0.16.0", default-features = false, features = [
    "e2e-encryption",
    "qrcode",
    "indexeddb",
    "js",
    "rustls-tls",
] }
stylance = "0.7.4"
wasm-bindgen = "0.2.115"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
